<resources>
    <string name="app_name">Fast Food</string>
    <string name="header_greetings">Hai Binarian,</string>
    <string name="header_asking">Mau makan apa kamu hari ini?\n</string>
    <string name="list_menu_makanan">List Menu Makanan</string>
    <string name="menu_description">Description\n</string>
    <string name="string_lokasi">Lokasi\n</string>
    <string name="string_satu">1\n</string>
    <string name="string_beli">Beli</string>
    <string name="string_hitung">Beli - Rp.%1d</string>
    <string name="string_location">Jl. Terusan Hang Lekir II Blok Mushola No.28 A, RT.9/RW.6, Gunung, Kec. Kby. Baru, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12220</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_keranjang">Keranjang</string>
    <string name="bottom_nav_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart_food_name">food_name</string>
    <string name="cart_price">Rp. 40.000</string>
    <string name="cart_order_notes">order notes</string>
    <string name="counter_cart_1">1</string>
    <string name="total_buy">x%s</string>
    <string name="string_cart">Cart</string>
    <string name="cart_total_price">Total Price</string>
    <string name="string_check_out">Check Out</string>
    <string name="text_delivery_method">Delivery Method</string>
    <string name="text_pick_up">Pick Up</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_payment_method">Payment Method\n</string>
    <string name="text_cash">Cash</string>
    <string name="text_e_wallet">E-Wallet</string>
    <string name="shopping_summary">Shopping Summary</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="empty">Empty</string>
    <string name="total_quantity">x%s</string>
    <string name="string_add_cart">Add to Cart</string>
    <string name="string_nama_pengguna">Nama Pengguna</string>
    <string name="string_username_profile">Username</string>
    <string name="text_log_in">Log in</string>
    <string name="text_register">Register</string>
    <string name="text_already_have_an_account_click_here">Already have an Account ? Login Here</string>
    <string name="hint_name">Your name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_not_registered_yet_register_here">Not registered yet ? Register Here</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_logout">Logout</string>
    <string name="text_ok">Ok</string>
    <string name="text_cart_is_empty">Cart is Empty</string>
    <string name="product_not_found">Not Found\n</string>

</resources>