<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">

    <ImageView
        android:id="@+id/iv_food"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H,1:1.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/menu_mie" />

    <TextView
        android:id="@+id/tv_food_name_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_total_buy"
        app:layout_constraintStart_toEndOf="@id/iv_food"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/cart_food_name" />

    <TextView
        android:id="@+id/tv_price_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@+id/tv_total_buy"
        app:layout_constraintStart_toEndOf="@+id/iv_food"
        app:layout_constraintTop_toBottomOf="@id/tv_food_name_order"
        tools:text="@string/cart_price" />

    <TextView
        android:id="@+id/tv_total_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/total_buy" />

    <TextView
        android:id="@+id/tv_order_notes_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_total_buy"
        app:layout_constraintStart_toEndOf="@+id/iv_food"
        app:layout_constraintTop_toBottomOf="@+id/tv_price_order"
        tools:text="@string/cart_order_notes" />

</androidx.constraintlayout.widget.ConstraintLayout>