<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_cart_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/iv_food"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/menu_mie" />

        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_food"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/cart_food_name" />

        <TextView
            android:id="@+id/tv_price_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/iv_food"
            app:layout_constraintTop_toBottomOf="@+id/tv_food_name"
            tools:text="@string/cart_price" />

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_counter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toEndOf="@+id/iv_food"
            app:layout_constraintTop_toBottomOf="@+id/tv_price_cart">

            <ImageView
                android:id="@+id/iv_minus"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_minus" />

            <TextView
                android:id="@+id/tv_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/counter_cart_1"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_add" />


        </LinearLayout>

        <View
            android:layout_width="260dp"
            android:layout_height="1dp"
            android:background="#000000"
            app:layout_constraintBottom_toTopOf="@+id/et_order_note"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_order_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:hint="@string/cart_order_notes"
            android:maxLines="2"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_food"
            app:layout_constraintTop_toBottomOf="@id/ll_counter"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>